--- a/index.html
+++ b/index.html
@@ -5,6 +5,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
 </head>
+<style>
+     body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #FFEDFA;
+  }
+
+  h2 {
+    text-align: center;
+    color: #BE5985;
+    font-weight: 750;
+    font-size: 40px;
+  }
+
+  .container {
+    margin: 20px auto;
+    padding: 30px;
+    max-width: 700px;
+    height: 350px;
+    background-color: #EC7FA9;
+    border-radius: 10px;
+  }
+
+.input-container {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-top: 20px; 
+  background-color: #EC7FA9;
+  padding: 15px;
+  border-radius: 8px;
+  position: relative; 
+}
+ .task-input {
+    background-color: #FFEDFA;
+    padding: 10px 15px;
+    width: 300px;
+    border: 2px solid #BE5985;
+    border-radius: 5px;
+    outline: none;
+    font-size: 1rem;
+  }
+
+  .add-button {
+    padding: 10px 15px;
+    margin-left: 15px;
+    border: none;
+    color: white;
+    border-radius: 5px;
+    background-color: #BE5985;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+  }
+
+  .add-button:hover {
+  box-shadow: 0 0 0 4px #FFEDFA,
+    0 0 0 8px #BE5985;
+  }
+</style>
 <body>
       <h2> 📝 My To Do List</h2>
   <div class="container">
