--- a/index.html
+++ b/index.html
@@ -89,6 +89,23 @@
     box-shadow: 0 0 0 4px #FFEDFA,
     0 0 0 8px #BE5985;
   }
+    @media screen and (max-width: 780px) {
+    .container {
+      width: 90%;
+      height: 400px;
+      padding: 10px;
+    }
+
+    .task-input {
+      width: 70%;
+      font-size: 14px;
+    }
+
+    .add-button {
+      padding: 10px 10px;
+      font-size: 14px;
+    }
+  }
 
 </style>
 <body>
